* bc, dc: Output for obase>16 does not end with trailing spaces anymore.
* bc: The '-=' operator did not work.
* nawk: CONVFMT was used in the System V personality but not in the POSIX
  personality, contrary to the documentation.
* nawk: printf("%u") did not work if the argument was larger that INT_MAX.
* nawk: RLENGTH was not set correctly for matches of zero length.
* file: The POSIX version does not exit with an error status if a file could
  not be opened.
* cpio, pax: The -plL (or -rwlL for pax) option combination now works; it
  creates links to the targets of all symbolic links in the source hierarchy.
* pax: The -pa and -pme option combinations now work.
* pax: The -po option works for users other than root (but only affects the
  group ownerships then).
* pax: Without -ro or -re, set[ug]id bits are not preserved.
* pax: A '&' in the replacement string for the '-s' option did not work.
* pax: The '-b' option now accepts multiplication suffixes.
* pax: The '-u' option is now respected in read mode too.
* pax: The '-n' option in read mode does not mark a pattern as used if it
  matched an archive entry but that entry was not selected due to '-u'.
* pax: If link() fails, no separate copy of an archive entry is created.
* pax: When a socket is encountered, print an error message and exit with
  failure for the POSIX.1-2001 version.
* pax: If invoked by a user other than the super-user and -po or -pe are
  given, the POSIX.1-2001 version produces an error for any extracted file
  not owned by the invoking user.
* find: Symbolic modes for -perm that include the sgid bit now work properly.
* cp: The -f option does not disable the -i option in the POSIX personality
  and vice-versa.
* df: Percentage values are now rounded to the next integer as demanded by
  POSIX.
* man: With the -k option, the exit status is now 0 if any matches have been
  found.
* stty: If ispeed and ospeed are different, both are printed separately.